--- a/azure_pipepile_ci_ra.yaml
+++ b/azure_pipepile_ci_ra.yaml
@@ -2,6 +2,14 @@ pool:
   name: Azure Pipelines
 
 steps:
+  
+- task: UseDotNet@2
+  displayName: Install .NET 6 sdk
+  inputs:
+    packageType: sdk
+    version: 6.0.x
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
