--- a/03_azure-pipelines-ci-cd.yml
+++ b/03_azure-pipelines-ci-cd.yml
@@ -106,13 +106,13 @@ stages:
         arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
         zipAfterPublish: True
 
-    - task: SonarCloudAnalyze@1
-      displayName: Run Code Analysis
-      enabled: ${{ parameters.runCompletePipeline }}
+    # - task: SonarCloudAnalyze@1
+    #   displayName: Run Code Analysis
+    #   enabled: ${{ parameters.runCompletePipeline }}
 
-    - task: SonarCloudPublish@1
-      displayName: Publish Quality Gate Result
-      enabled: ${{ parameters.runCompletePipeline }}
+    # - task: SonarCloudPublish@1
+    #   displayName: Publish Quality Gate Result
+    #   enabled: ${{ parameters.runCompletePipeline }}
 
     - task: PublishBuildArtifacts@1
       displayName: Publish Artifact (WebApp.zip)
