--- a/03_azure-pipelines-ci-cd.yml
+++ b/03_azure-pipelines-ci-cd.yml
@@ -188,7 +188,7 @@ stages:
     WebAppName: '$(Prefix)-$(Release.EnvironmentName)-$(UniqueId)'
     WebAppNameUrl: 'https://$(WebAppName).azurewebsites.net/'
     SqlServerName: '$(Prefix)-sql-$(Release.EnvironmentName)-$(UniqueId)'
-    Prefix: 'tunis'
+    Prefix: 'ra-udemy-learning'
     Release.EnvironmentName: 'dev'
     UniqueId: '1280' #'$(Build.BuildId)'
     hostingPlanName: '$(Prefix)-service-plan'
