--- a/03_azure-pipelines-ci-cd.yml
+++ b/03_azure-pipelines-ci-cd.yml
@@ -120,6 +120,25 @@ stages:
         PathtoPublish: '$(build.artifactstagingdirectory)'
         ArtifactName: drop
 
+    - task: SonarQubePrepare@5
+      inputs:
+        SonarQube: 'Analyze-Pipelines'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'Lab-All-Pipelines_Lab-All-Pipelines_AYDoYXPvsGl-Mlsb2bp8v'
+        cliSources: '.'
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        script: |
+          $params = "$env:SONARQUBE_SCANNER_PARAMS" -replace '"sonar.branch.name":"[\w,/,-]*"\,?'
+              Write-Host "##vso[task.setvariable variable=SONARQUBE_SCANNER_PARAMS]$params"
+    - task: SonarQubeAnalyze@5
+
+    - task: SonarQubePublish@5
+      inputs:
+        pollingTimeoutSec: '300'
+
   - job: Database
     displayName: Build Database
     pool:
